fixed overflow lines

--- a/mail/mail/static/mail/styles.css
+++ b/mail/mail/static/mail/styles.css
@@ -6,3 +6,7 @@ textarea {
     margin: 10px 0px 10px 0px;
     padding: 5px;
 }
+
+p {
+    word-wrap: break-word;
+}
